[project]
requires-python = ">= 3.11"

[project.urls]
homepage = "https://github.com/Enyium/windows_toolkit_talon"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pyright]
typeCheckingMode = "standard"

reportMissingModuleSource = "none"
reportUnknownParameterType = "error"
reportMissingParameterType = "error"
reportSelfClsParameterName = "none"
